prometheus/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.34.0
          ports:
            - name: http
              containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /prometheus
            - name: config
              mountPath: /etc/prometheus
      volumes:
        - name: config
          configMap:
            name: config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1G
