prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    prometheus.io/scrape: "true"
spec:
  selector:
    name: prometheus
  ports:
    - name: http
      port: 80
      targetPort: http
